Tour complet avec pose des dominos pour user ou NPC